atualização
modificação de alguns métodos